<resources>
    <string name="app_name">nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_app">My NanoDegree App</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="score_app">Score App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="my_own_app">Capstone: My Own App</string>
</resources>
