<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_nanodegree_app" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_nanodegree_app_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotify_streamer"
        android:onClick="openSpotify"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#F08C35"

        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_app"
        android:id="@+id/button_score_app"
        android:onClick="openScoreApp"
        android:layout_below="@+id/button_spotify_streamer"
        android:layout_alignLeft="@+id/button_spotify_streamer"
        android:layout_alignRight="@+id/button_spotify_streamer"
        android:background="#F08C35"
        android:layout_marginBottom="16dp"

     />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button_library_app"
        android:onClick="openLibraryApp"
        android:layout_below="@+id/button_score_app"
        android:layout_alignLeft="@+id/button_spotify_streamer"
        android:layout_alignRight="@+id/button_spotify_streamer"
        android:background="#F08C35"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:onClick="openBuildItBigger"
        android:layout_below="@+id/button_library_app"
        android:layout_alignLeft="@+id/button_spotify_streamer"
        android:layout_alignRight="@+id/button_spotify_streamer"
        android:background="#F08C35"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/button_bacon_reader"
        android:onClick="openXyaReader"
        android:background="#F08C35"
        android:layout_below="@+id/button_build_it_bigger"
        android:layout_alignLeft="@+id/button_spotify_streamer"
        android:layout_alignRight="@+id/button_spotify_streamer"
        android:layout_marginBottom="16dp"
        style="@style/Base.Widget.AppCompat.Button"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_own_app"
        android:id="@+id/button_my_own_app"
        android:onClick="openCapstone"
        android:layout_below="@+id/button_bacon_reader"
        android:layout_alignLeft="@+id/button_spotify_streamer"
        android:layout_alignRight="@+id/button_spotify_streamer"
        android:layout_marginBottom="16dp"
        />



</RelativeLayout>
